作者福利和搜索

--- a/index.html
+++ b/index.html
@@ -146,6 +146,11 @@
 					interval: 3000
 				})
 			});
+			$(function() {
+				$("input").focus(function(){
+				    window.location.href="./search.html"
+				});
+			})
 		</script>
 
 	</body>
