--- a/article.html
+++ b/article.html
@@ -40,6 +40,7 @@
 			</div>
 			<article class="arti">
 				　　大风灌进屋中，吹灭了牌位前的蜡烛，所有人都被眼前的情景惊住了，怔愣片刻才七手八脚地上前拉扯。　　大风灌进屋中，吹灭了牌位前的蜡烛，所有人都被眼前的情景惊住了，怔愣片刻才七手八脚地上前拉扯。　　大风灌进屋中，吹灭了牌位前的蜡烛，所有人都被眼前的情景惊住了，怔愣片刻才七手八脚地上前拉扯。　　大风灌进屋中，吹灭了牌位前的蜡烛，所有人都被眼前的情景惊住了，怔愣片刻才七手八脚地上前拉扯。　　大风灌进屋中，吹灭了牌位前的蜡烛，所有人都被眼前的情景惊住了，怔愣片刻才七手八脚地上前拉扯。　　大风灌进屋中，吹灭了牌位前的蜡烛，所有人都被眼前的情景惊住了，怔愣片刻才七手八脚地上前拉扯。　　大风灌进屋中，吹灭了牌位前的蜡烛，所有人都被眼前的情景惊住了，怔愣片刻才七手八脚地上前拉扯。　　大风灌进屋中，吹灭了牌位前的蜡烛，所有人都被眼前的情景惊住了，怔愣片刻才七手八脚地上前拉扯。　　大风灌进屋中，吹灭了牌位前的蜡烛，所有人都被眼前的情景惊住了，怔愣片刻才七手八脚地上前拉扯。
+					，吹灭了牌位前的蜡烛，所有人都被眼前的情景惊住了，怔愣片刻才七手八脚地上前拉扯。　　大风灌进屋中，吹灭了牌位前的蜡烛，所有人都被眼前的情，吹灭了牌位前的蜡烛，所有人都被眼前的情景惊住了，怔愣片刻才七手八脚地上前拉扯。　　大风灌进屋中，吹灭了牌位前的蜡烛，所有人都被眼前的情，吹灭了牌位前的蜡烛，所有人都被眼前的情景惊住了，怔愣片刻才七手八脚地上前拉扯。　　大风灌进屋中，吹灭了牌位前的蜡烛，所有人都被眼前的情，吹灭了牌位前的蜡烛，所有人都被眼前的情景惊住了，怔愣片刻才七手八脚地上前拉扯。　　大风灌进屋中，吹灭了牌位前的蜡烛，所有人都被眼前的情，吹灭了牌位前的蜡烛，所有人都被眼前的情景惊住了，怔愣片刻才七手八脚地上前拉扯。　　大风灌进屋中，吹灭了牌位前的蜡烛，所有人都被眼前的情，吹灭了牌位前的蜡烛，所有人都被眼前的情景惊住了，怔愣片刻才七手八脚地上前拉扯。　　大风灌进屋中，吹灭了牌位前的蜡烛，所有人都被眼前的情，吹灭了牌位前的蜡烛，所有人都被眼前的情景惊住了，怔愣片刻才七手八脚地上前拉扯。　　大风灌进屋中，吹灭了牌位前的蜡烛，所有人都被眼前的情，吹灭了牌位前的蜡烛，所有人都被眼前的情景惊住了，怔愣片刻才七手八脚地上前拉扯。　　大风灌进屋中，吹灭了牌位前的蜡烛，所有人都被眼前的情
 			</article>
 			<!-- <div class="cata d-flex justify-content-between p-2">
 				<small class="text-secondary">第002章 大佬的掌中霸王花</small>
@@ -56,6 +57,11 @@
 					<div class="swiper-slide">Slide 3</div>
 				</div>
 			</div> -->
+			<div class="d-flex justify-content-around position-fixed fixed-bottom bg-white pt-1 pb-1">
+				<a href="catalog.html" class="btn btn-sm btn-outline-success ml-2">目录</a>
+				<a href="catalog.html" class="btn btn-sm btn-outline-success ml-2">目录</a>
+				<a href="catalog.html" class="btn btn-sm btn-outline-success ml-2">目录</a>
+			</div>
 		</div>
 
 
